Add specific autolayout constraints for the Toolbar on iPad.

Bug: 777948
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I83db7b5ed345b7336324f369d3b1dec175c12b4b