ios/chrome/browser/ui/browser_view_controller.mm
@@ -1901,17 +1901,24 @@ applicationCommandEndpoint:(id<ApplicationCommands>)applicationCommandEndpoint {
 }
 
 - (void)addConstraintsToToolbar {
+  NSLayoutYAxisAnchor* topAnchor;
+  // On iPad, the toolbar is underneath the tab strip.
+  // On iPhone, it is underneath the top of the screen.
+  if (IsIPadIdiom()) {
+    topAnchor = self.tabStripView.bottomAnchor;
+  } else {
+    topAnchor = [self view].topAnchor;
+  }
+
   toolbarHeightConstraint_ = [[_toolbarCoordinator view].heightAnchor
       constraintEqualToConstant:
           [_toolbarCoordinator.webToolbarController
-
                   preferredToolbarHeightWhenAlignedToTopOfScreen]];
 
   [NSLayoutConstraint activateConstraints:@[
     [[_toolbarCoordinator view].leadingAnchor
         constraintEqualToAnchor:[self view].leadingAnchor],
-    [[_toolbarCoordinator view].topAnchor
-        constraintEqualToAnchor:[self view].topAnchor],
+    [[_toolbarCoordinator view].topAnchor constraintEqualToAnchor:topAnchor],
     [[_toolbarCoordinator view].trailingAnchor
         constraintEqualToAnchor:[self view].trailingAnchor],
     toolbarHeightConstraint_
